--- a/SkillPrestige/manifest.json
+++ b/SkillPrestige/manifest.json
@@ -1,7 +1,7 @@
 {
     "Name": "Skill Prestige",
     "Author": "CinderGarde",
-    "Version": "1.4.2",
+    "Version": "1.4.4",
     "Description": "Lets you earn permanent profession perks beyond that which can normally be obtained in Vanilla play by spending Prestige Points, earned by resetting a skill from 10 to 0.",
     "UniqueID": "alphablackwolf.skillPrestige",
     "EntryDll": "SkillPrestige.dll",
@@ -11,10 +11,12 @@
     ],
     "Dependencies": [
         {
-            "UniqueID": "Pathoschild.ContentPatcher"
+            "UniqueID": "Pathoschild.ContentPatcher",
+            "MinimumVersion": "2.6.1"
         },
         {
-            "UniqueID": "spacechase0.SpaceCore"
+            "UniqueID": "spacechase0.SpaceCore",
+            "MinimumVersion": "1.27.0"
         }
     ]
 }
