fix: adapter include paths

--- a/SkillPrestigeAdapter/SkillPrestige.Yacs/SkillPrestige.Yacs.csproj
+++ b/SkillPrestigeAdapter/SkillPrestige.Yacs/SkillPrestige.Yacs.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SkillPrestige\SkillPrestige.csproj" />
+    <ProjectReference Include="..\..\SkillPrestige\SkillPrestige.csproj" />
   </ItemGroup>
 
   <ItemGroup>
