--- a/SkillPrestigeAdapter/SkillPrestige.SnSPaladin/SkillPrestige.SnSPaladin.csproj
+++ b/SkillPrestigeAdapter/SkillPrestige.SnSPaladin/SkillPrestige.SnSPaladin.csproj
@@ -5,10 +5,11 @@
 		<RootNamespace>SkillPrestige.SnSRogue</RootNamespace>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
-	</ItemGroup>
-	
+  <ItemGroup>
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
+    <PackageReference Include="Leclair.Stardew.ModManifestBuilder" Version="2.4.1" />
+  </ItemGroup>
+
 	<PropertyGroup>
 		<Name>SkillPrestige.SnSPaladin</Name>
 		<Author>Milli2306</Author>
@@ -17,11 +18,11 @@
 
 		<UpdateKeys></UpdateKeys>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
-		<ProjectReference Include="..\SkillPrestige\SkillPrestige.csproj" />
+		<ProjectReference Include="..\..\SkillPrestige\SkillPrestige.csproj" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<Reference Include="SpaceCore">
 			<HintPath>$(GameModsPath)\SpaceCore\SpaceCore.dll</HintPath>
