--- a/SkillPrestige/manifest.json
+++ b/SkillPrestige/manifest.json
@@ -1,22 +1,30 @@
 {
-    "Name": "Skill Prestige",
-    "Author": "CinderGarde",
-    "Version": "1.4.4",
-    "Description": "Lets you earn permanent profession perks beyond that which can normally be obtained in Vanilla play by spending Prestige Points, earned by resetting a skill from 10 to 0.",
-    "UniqueID": "alphablackwolf.skillPrestige",
-    "EntryDll": "SkillPrestige.dll",
-    "MinimumApiVersion": "4.0.0",
-    "UpdateKeys": [
-        "Nexus:569"
-    ],
-    "Dependencies": [
-        {
-            "UniqueID": "Pathoschild.ContentPatcher",
-            "MinimumVersion": "2.6.1"
-        },
-        {
-            "UniqueID": "spacechase0.SpaceCore",
-            "MinimumVersion": "1.27.0"
-        }
-    ]
+  /*
+   | This file is automatically updated by ModManifestBuilder
+   | when the project is compiled.
+   | 
+   | Changes made to this file may be overwritten.
+   | 
+   */
+  "$schema": "https://smapi.io/schemas/manifest.json",
+  "UniqueID": "alphablackwolf.skillPrestige",
+  "Name": "SkillPrestige",
+  "Author": "CinderGarde",
+  "Version": "1.2.5-Debug",
+  "Description": "Lets you earn permanent profession perks beyond that which can normally be obtained in Vanilla play by spending Prestige Points, earned by resetting a skill from 10 to 0.",
+  "MinimumApiVersion": "4.0.0",
+  "EntryDll": "SkillPrestige.dll",
+  "Dependencies": [
+    {
+      "UniqueID": "Pathoschild.ContentPatcher",
+      "MinimumVersion": "2.6.1"
+    },
+    {
+      "UniqueID": "spacechase0.SpaceCore",
+      "MinimumVersion": "1.27.0"
+    }
+  ],
+  "UpdateKeys": [
+    "Nexus:569"
+  ]
 }
