--- a/SkillPrestigeAdapter/SkillPrestige.SnSBard/manifest.json
+++ b/SkillPrestigeAdapter/SkillPrestige.SnSBard/manifest.json
@@ -8,10 +8,10 @@
    */
   "$schema": "https://smapi.io/schemas/manifest.json",
   "UniqueID": "Milli2306.SnSPrestigeAdapterBard",
-  "Name": "Skill Prestige for the Bard Skill from SnS",
+  "Name": "SkillPrestige.SnSBard",
   "Author": "Milli2306",
   "Version": "1.0.0-Debug",
-  "Description": "Extends Skill Prestige to support the Bard Skill from SnS.",
+  "Description": "Extends Skill Prestige to support the Bard Skill from SnS",
   "MinimumApiVersion": "4.0.0",
   "EntryDll": "SkillPrestige.SnSBard.dll",
   "Dependencies": [
