--- a/SkillPrestigeAdapter/SkillPrestige.SnSDruid/manifest.json
+++ b/SkillPrestigeAdapter/SkillPrestige.SnSDruid/manifest.json
@@ -8,10 +8,10 @@
    */
   "$schema": "https://smapi.io/schemas/manifest.json",
   "UniqueID": "Milli2306.SnSPrestigeAdapterDruid",
-  "Name": "Skill Prestige for the Druid Skill from SnS",
+  "Name": "SkillPrestige.SnSDruid",
   "Author": "Milli2306",
   "Version": "1.0.0-Debug",
-  "Description": "Extends Skill Prestige to support the Druid Skill from SnS.",
+  "Description": "Extends Skill Prestige to support the Druid Skill from SnS",
   "MinimumApiVersion": "4.0.0",
   "EntryDll": "SkillPrestige.SnSDruid.dll",
   "Dependencies": [
