--- a/SkillPrestigeAdapter/SkillPrestige.SnSWitchcraft/SkillPrestige.SnSWitchcraft.csproj
+++ b/SkillPrestigeAdapter/SkillPrestige.SnSWitchcraft/SkillPrestige.SnSWitchcraft.csproj
@@ -5,9 +5,10 @@
 		<RootNamespace>SkillPrestige.SnSWitchcraft</RootNamespace>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
+    <PackageReference Include="Leclair.Stardew.ModManifestBuilder" Version="2.4.1" />
+  </ItemGroup>
 
 	<PropertyGroup>
 		<Name>SkillPrestige.SnSWitchcraft</Name>
@@ -19,9 +20,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\SkillPrestige\SkillPrestige.csproj" />
+		<ProjectReference Include="..\..\SkillPrestige\SkillPrestige.csproj" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<Reference Include="SpaceCore">
 			<HintPath>$(GameModsPath)\SpaceCore\SpaceCore.dll</HintPath>
