--- a/SkillPrestigeAdapter/SkillPrestige.Travelling/SkillPrestige.Travelling.csproj
+++ b/SkillPrestigeAdapter/SkillPrestige.Travelling/SkillPrestige.Travelling.csproj
@@ -5,10 +5,10 @@
 		<RootNamespace>SkillPrestige.Travelling</RootNamespace>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
+    <PackageReference Include="Leclair.Stardew.ModManifestBuilder" Version="2.4.1" />
+  </ItemGroup>
 
 	<PropertyGroup>
 		<Name>SkillPrestige.Travelling</Name>
@@ -20,9 +20,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\SkillPrestige\SkillPrestige.csproj" />
+		<ProjectReference Include="..\..\SkillPrestige\SkillPrestige.csproj" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<Reference Include="SpaceCore">
 			<HintPath>$(GameModsPath)\SpaceCore\SpaceCore.dll</HintPath>
